<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:padding="10dip"
	android:background="@color/black">
    

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="vertical">
        
       <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:layout_marginBottom="6dip"
        android:background="@color/white"
        android:padding="7dip"
        />
        
           
         <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginBottom="6dip"
        android:background="@color/white"
         android:padding="7dip"/>    
        
        <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginBottom="4dip"
        android:background="@color/white"
        android:padding="7dip"/>   
            
        
        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:layout_marginTop="35dip"
        android:layout_gravity="center_horizontal" 
       	android:textColor="@color/white"
        android:textSize="12sp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/placeholder"
        android:layout_width="180dip"
        android:layout_height="180dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_launcher"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeholder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/reg_info"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        />

</RelativeLayout>